Closed Bug 1824307 Opened 3 years ago Closed 3 years ago

VAAPI: Small H264 videos in Firefox and Gnome Video are corrupted on AMD RS880

Categories

(Core :: Audio/Video: Playback, defect, P3)

Firefox 113
Unspecified
Linux
defect

Tracking

()

RESOLVED FIXED
113 Branch
Tracking Status
firefox-esr102 --- disabled
firefox111 --- disabled
firefox112 --- disabled
firefox113 --- fixed

People

(Reporter: ke5trel, Assigned: stransky)

References

(Blocks 2 open bugs, )

Details

Attachments

(5 files)

STR:

  1. On Ubuntu 22.10 with AMD RS880 (R600) (mesa 22.2.5 and 23.0.0) make sure WebRender and VAAPI are enabled (default since Bug 1798360).
  2. Open attached 174x98 H264 video Big_Buck_Bunny_98_10s.mp4.

Green artifacts appear on the video, occurs for horizontal videos with height less than 100 pixels and vertical videos with height less than 234 pixels.

The same issue occurs with the GNOME Videos app, indicating it is a driver bug.

:bradwerth, since you are the author of the regressor, bug 1798360, could you take a look? Also, could you set the severity field?

For more information, please visit auto_nag documentation.

Flags: needinfo?(bwerth)
Flags: needinfo?(bwerth)
No longer regressed by: 1798360
Keywords: regression
Summary: Small H264 videos are corrupted on AMD RS880 with VAAPI → VAAPI: Small H264 videos in Firefox and Gnome Video are corrupted on AMD RS880

The same issue occurs with the GNOME Videos app, indicating it is a driver bug.

Are you able to reproduce the issue with mpv --hwdec=vaapi Big….mp4?

Please attach the output of about:support, and paste the output of vainfo.

I'd say it's comes from Bug 1802844. We may need to add force-enable for zero copy to debug it.

Flags: needinfo?(stransky)

(In reply to Kestrel from comment #0)
Has this build been fine?
mozregression --launch 2023-03-08 --pref gfx.webrender.all:true media.ffmpeg.vaapi.enabled:true -a https://bugzilla.mozilla.org/attachment.cgi?id=9324831

Depends on: 1824335

Kestrel, please try the mpv player.

Flags: needinfo?(stransky) → needinfo?(ke5trel)

It also occurs with mpv using VAAPI.

It is not a recent regressing change, it goes back to the introduction of VAAPI but is now exposed by default in Beta and Nightly due to Bug 1798360 removing R600 from the Webrender blacklist. media.ffmpeg.vaapi.force-surface-copy = true does not make any difference.

Flags: needinfo?(ke5trel)
Attached file vainfo.txt

Thanks. Please attach about:support page.

Flags: needinfo?(ke5trel)
Flags: needinfo?(ke5trel)
Priority: -- → P3
Assignee: nobody → stransky
Status: NEW → ASSIGNED
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/7d25be768047 [VAAPI] Disable HW video decoding on AMD R600 r=aosmond
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch
See Also: → 1957943
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: