Bug 1824307 [VAAPI] Disable HW video decoding on AMD R600 r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D173665